--- a/humanresource/templates/HR/member_create.html
+++ b/humanresource/templates/HR/member_create.html
@@ -31,7 +31,7 @@
 
     <section class="main_section">
         <div class="top_box">
-            <div class="top_box_title">직원 등록</div>
+            <div class="top_box_title member_create__top_box_title">직원 등록</div>
         </div>
         <div class="member_create__mid_box">
             <form method="POST" action="">
