--- a/accounting/templates/accounting/salary_detail.html
+++ b/accounting/templates/accounting/salary_detail.html
@@ -44,12 +44,9 @@
                 <form action="" class="accounting_outlay_search_form">
                     <select name="year" class="accounting_outlay_search_date">
                         <option></option>
-                        <option value="2021" {% if '2021' == selected_year %} selected {% endif %}>2021년</option>
-                        <option value="2022" {% if '2022' == selected_year %} selected {% endif %}>2022년</option>
-                        <option value="2023" {% if '2023' == selected_year %} selected {% endif %}>2023년</option>
-                        <option value="2024" {% if '2024' == selected_year %} selected {% endif %}>2024년</option>
-                        <option value="2025" {% if '2025' == selected_year %} selected {% endif %}>2025년</option>
-
+                        {% for i in option_year %}
+                            <option value="{{i}}" {% if i == int_selected_year %} selected {% endif %}>{{i}}년</option>
+                        {% endfor %}
                     </select>
                     <select name="month" class="accounting_outlay_search_date">
                         <option></option>
