--- a/humanresource/templates/HR/member_edit.html
+++ b/humanresource/templates/HR/member_edit.html
@@ -31,7 +31,7 @@
 
     <section class="main_section">
         <div class="top_box">
-            <div class="top_box_title">직원 정보 수정</div>
+            <div class="top_box_title member_create__top_box_title">직원 정보 수정</div>
         </div>
         <div class="member_create__mid_box">
             <form method="POST" action="">
@@ -66,12 +66,12 @@
                     </div>
                     <div class="member_create__mid_box__content_box">
                         <div class="member_create__mid_box__content_box_content_box_first">
-                            <div class="member_create__mid_box__content_box__content_header">권한</div>
-                            <input type="text" name="authority" class="member_create__mid_box__content_box__content" value="{{member.authority}}">
-                        </div>
-                        <div class="member_create__mid_box__content_box_content_box">
                             <div class="member_create__mid_box__content_box__content_header">입사일</div>
                             <input type="date" name="entering_date" class="member_create__mid_box__content_box__content input_date" value="{{member.entering_date}}">
+                        </div>
+                        <div class="member_create__mid_box__content_box_content_box">
+                            <div class="member_create__mid_box__content_box__content_header">퇴사일</div>
+                            <input type="date" name="resignation_date" class="member_create__mid_box__content_box__content input_date" value="{{member.resignation_date}}">
                         </div>
                     </div>
                     <div class="member_create__mid_box__content_box">
