--- a/static/css/hr/hr/hr_list.css
+++ b/static/css/hr/hr/hr_list.css
@@ -57,14 +57,15 @@
 
 
 .member_detail__mid_table_header__text{
-    width: 15rem;
+    width: 13rem;
 }
 
 .member_detail__mid_table_header__text:nth-child(4){
     width: 25rem;
 }
 
-.member_detail__mid_table_header__text:nth-child(1){
+.member_detail__mid_table_header__text:nth-child(1),
+.member_detail__mid_table_header__text:nth-child(3){
     width: 10rem;
 }
 
@@ -80,11 +81,16 @@
 }
 
 .member_detail__mid_table_content__text{
-    width: 15rem;
+    width: 13rem;
 }
 
 .member_detail__mid_table_content__text:nth-child(4){
     width: 25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4rem;
+    overflow: auto;
 }
 
 .member_detail__mid_table_content__text_num{
